# talos-deburring

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  compare_controllers.py  environment.yml  main.py  pyproject.toml  settings_sobec.yaml  test_OCP.py  test_init.py
apptainer/: rl_mamba.def  rl_sandbox.def
blender_utils/: export_trajectories.py  import_blender.py
config/: config.yaml  config_MPC_RL.yaml  config_RL.yaml  config_RL_test.yaml  test.py
controllers/: MCP.py  MPC.py  RL-MPC.py  RL.py  RL_posture.py  RL_torque.py
deburring-deep-planner/: CMakeLists.txt  package.xml
deburring-deep-planner/config/: nn_settings.yaml
deburring-deep-planner/launch/: deep_planner.launch
deburring-deep-planner/node/: nn_node.py
deburring-deep-planner/test/: test_node.py
deburring-mpc/: CMakeLists.txt  README.md
deburring-planner/: CMakeLists.txt  package.xml
deburring-planner/config/: 2024-04-08_3joints_3.onnx  nn_settings.yaml
deburring-planner/launch/: deep_planner.launch
deburring-planner/node/: nn_node.py  test_SAC_model.onnx
deburring-planner/test/: test_node.py
deburring-python-utils/: README.md  environment.yaml  main.py  pyproject.toml
deburring-python-utils/controllers/: MPC.py  RL_torque.py  Riccati.py
deburring-python-utils/deburring_benchmark/: __main__.py  config_benchmark.yaml
deburring-python-utils/deburring_benchmark/factory/: benchmark_MPC.py  benchmark_MPC_noRiccati.py  benchmark_MPC_variablePosture.py  benchmark_MPRL.py  benchmark_base.py
deburring-python-utils/gym_talos/: __main__.py  display.py  training_MPC.py
deburring-python-utils/gym_talos/config/: config_MPC_RL.yaml  config_RL.yaml
deburring-python-utils/gym_talos/envs/: env_talos_base.py  env_talos_deburring.py  env_talos_deburring_her.py  env_talos_mpc_deburring.py
deburring-python-utils/gym_talos/simulator/: bullet_Talos.py  filter.py
deburring-python-utils/gym_talos/tests/: factory.py  test_action_wrapper.py
deburring-python-utils/gym_talos/utils/: action_wrapper.py  create_target.py  custom_callbacks.py  loader_and_saver.py  modelLoader.py
deburring-python-utils/limit_checker_talos/: limit_checker.py
deburring-python-utils/robot_description/: path_getter.py
deburring-python-utils/robot_description/meshes/gripper/: fingertip_tooled.stl
deburring-python-utils/robot_description/mujoco/: README.md  scene_motor.xml  scene_position.xml  scene_velocity.xml  talos.xml  talos_motor.xml  talos_position.xml  talos_velocity.xml
deburring-python-utils/robot_description/srdf/: talos.srdf
deburring-python-utils/robot_description/urdf/: talos_blender.urdf  talos_example_robot.urdf  talos_public.urdf
deburring-python-utils/simulator/: bullet_Talos.py  filter.py  mujoco_Talos.py
deburring-python-utils/test/: test_bullet_simulator.py  test_limit_checker.py
deburring-python-utils/tests/gym_talos/: config_test.yaml  factory.py  test_action_wrapper.py  test_observation_wrapper.py
deburring-python-utils/tests/limit_checker_talos/: test_limit_checker.py
deburring-python-utils/tests/simulator/: test_bullet_simulator.py  test_pd_controller.py
deburring-python-utils/utils/: compare_controllers.py  compare_trajectory.py  evaluate_torque.py  extract_trajectory.py  test_init.py
deburring-ros-interface/: CMakeLists.txt  package.xml
factory/: benchmark_MPC.py  benchmark_MPC_noRiccati.py  benchmark_MPC_variablePosture.py  benchmark_MPRL.py  benchmark_base.py  benchmark_results.py
gym_talos/: __main__.py  display.py  evaluation.py  main_backup.py  test.py  test_MPC.py  training_MPC.py
pfCalcul/: README.md  schedule.sh
(+60 files in other folders)
