<?xml version="1.0"?>
<package format="2">
  <name>deburring_deep_planner</name>
  <version>0.0.0</version>
  <description>Deep neural network posture planner for Talos deburing</description>

  <maintainer email="cperrot@laas.fr">Côme Perrot</maintainer>
  <license>BSD 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ropsy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>ropsy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>ropsy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
