[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Côme Perrot <come.perrot@laas.fr>"]
description = "Python utils for deburring with Talos"
license = "BSD-2-Clause"
name = "deburring-python-utils"
packages = [
  {include = "controllers"},
  {include = "deburring_benchmark"},
  {include = "gym_talos"},
  {include = "limit_checker_talos"},
  {include = "robot_description"},
  {include = "simulator"}
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
example-robot-data = {optional = true, version = "^4.0.7"}
pybullet = {optional = true, version = "^3.2.5"}
python = "^3.8"
pyyaml = {optional = true, version = "^6.0"}
stable-baselines3 = {allow-prereleases = true, optional = true, version = "^2.0.0a10"}
tensorboard = {optional = true, version = "^2.13.0"}
torch = {optional = true, source = "torch-cpu", version = "^2.0.1"}

[tool.poetry.extras]
deps = ["example-robot-data", "pybullet", "pyyaml", "stable-baselines3", "tensorboard", "torch"]

[[tool.poetry.source]]
name = "torch-cpu"
priority = "explicit"
url = "https://download.pytorch.org/whl/cpu"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
ignore = ["D203", "D213"]
extend-select = ["A", "B", "C", "COM", "DJ", "EM", "EXE", "G", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.ruff.lint.isort]
known-first-party = ["deburring_mpc"]

[tool.tomlsort]
all = true
